Closed Bug 613732 Opened 14 years ago Closed 14 years ago

Image does not appear and forever Loading... on www.deviantart.com

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0
Tracking Status
blocking2.0 --- beta8+

People

(Reporter: alice0775, Assigned: luke)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

Build Identifier: 
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101120 Firefox/4.0b8pre ID:20101120044537

See forum http://forums.mozillazine.org/viewtopic.php?p=10147943#p10147943

deviantArt pages will not load

Reproducible: Always

Steps to Reproduce:
1. Start Minefield with new profile
2. Open http://www.deviantart.com/#/d3377xz

Actual Results:

Forever Loading...
(screenshot http://i.imgur.com/3FR0k.png )

Error in the Error console:
Error: C.apply is not a function
Source file: http://st.deviantart.net/css/v6core_jc.js?119658736083
Line: 51

Error: I is not a function
Source file: http://st.deviantart.net/css/v6core_jc.js?119658736083
Line: 51

Expected Results:
Image should appears

Regression wndow (m-c):
Works:
http://hg.mozilla.org/mozilla-central/rev/2cd50afa5a00
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101117 Firefox/4.0b8pre ID:20101117143731
Fails:
http://hg.mozilla.org/mozilla-central/rev/35f8ec6fa9e6
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101117 Firefox/4.0b8pre ID:20101117151808
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2cd50afa5a00&tochange=35f8ec6fa9e6

Regression wndow (TM):
Works:
http://hg.mozilla.org/tracemonkey/rev/258744efa972
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101103 Firefox/4.0b8pre ID:20101103201240
Fails:
http://hg.mozilla.org/tracemonkey/rev/92af3359a18f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101104 Firefox/4.0b8pre ID:20101104170738
Pushlog:
http://hg.mozilla.org/tracemonkey/pushloghtml?fromchange=258744efa972&tochange=92af3359a18f

Candidate:
Bug 595884 and Bug 602129
Blocks: 595884
blocking2.0: --- → ?
Turning off javascript.options.methodjit.content allows page to load.
Luke, this looks like f.call fallout from bug 602129.
blocking2.0: ? → betaN+
blocking2.0: betaN+ → beta9+
Additional steps to reproduce:

1.  Load a deviantART gallery, for instance:
http://browse.deviantart.com/customization/skins/windows7/visualstyle/?order=5#

2.  Attempt to view a deviation by left clicking it.  This step triggers the
forever loading page.

I've noticed the following:

When you hover a deviation, it properly displays the URL in the address bar,
but when you click it, the URL is passed improperly. You can right click the
deviation, choose to copy the link, and then paste and go in the address bar.
It's also properly opened if you middle click it or choose Open in New Tab.

For instance, hovering the Aero Evolution deviation in the link I posted above
you will see:
http://portraitpoint.deviantart.com/art/Aero-Evolution-187021340?q=in%3Acustomization%2Fskins%2Fwindows7%2Fvisualstyle+sort%3Atime&qo=0

But if you left click it to open it, you are taken to:
http://browse.deviantart.com/customization/skins/windows7/visualstyle/?order=5#/d33cil8
It's using javascript to override the default action of the link, you aren't going to a new page.  This is very common and perfectly normal.
Assignee: general → lw
Attached patch fixSplinter Review
The peephole matching of [JSOP_ARGUMENTS, JSOP_FUNAPPLY] failed to check whether JSOP_FUNAPPLY was at a control-flow join point.  This caused any expression of the form
  f.apply(null, a ? b : arguments)
to be passed 'arguments' unconditionally.

Thanks for the reproducible test case and pointing out the 'C.apply' error!
Attachment #492882 - Flags: review?(dvander)
Attachment #492882 - Flags: review?(dvander) → review+
blocking2.0: beta9+ → beta8+
http://hg.mozilla.org/mozilla-central/rev/64c4716a72dd
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Confirming resolved fixed.  Thanks!

Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101124 Firefox/4.0b8pre
With latest builds I've noticed that when I get the "loading" text nothing is loaded and a [xx] appears. Something is broken again I suppose.
There is more now: in case it succeeds to load the content all the description and comment sections are missing from the page...check please.
EDIT: sorry, maybe it's adblock fault
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: