Bug 613732 - Fix bug in f.apply(x, arguments) optimization (r=dvander, a=b8+)

--HG--
extra : rebase_source : 06cbd1194b8c2bc3ac26f548046957acc21ffd5b